--- a/Frankenweenie.csproj
+++ b/Frankenweenie.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>Frankenweenie</RootNamespace>
     <AssemblyName>Frankenweenie</AssemblyName>
     <ApplicationIcon />
@@ -22,6 +22,10 @@
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1641" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="SpriteFontPlus.MonoGame" Version="0.7.0.22" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Engine\Fmod\" />
   </ItemGroup>
 
 </Project>
